--- a/app.frontend.html
+++ b/app.frontend.html
@@ -2,18 +2,19 @@
     <body style="background-color: white;">
         <div id="root"></div>
     </body>
-    <script src="./ui/chat-console-msgs.js"></script>
-    <script src="./ui/chat-bubble.js"></script>
-    <script src="./ui/chat-window.js"></script>
-    <script src="./ui/chat-console.js"></script>
-    <script src="./ui/chat-nav-list.js"></script>
-    <script src="./ui/chat-console-dynamicForms.js"></script>
-    <script src="./ui/UINode.js"></script>
-    <script src="./ui/UINodeManager.js"></script>
-    <script src="./ui/seed.js"></script>
-    <script src="./ui/route.js"></script>
-    <script src="./ui/routes.js"></script>
-    <script src="./ui/router.js"></script>
-    <script src="./ui/app.js"></script>
-    <script src="./ui/index.js"></script>
+    <script src="./ui/ui-node.js" type="text/javascript"></script>
+    <script src="./ui/ui-node-manager.js" type="text/javascript"></script>
+    <script src="./ui/chat-bubble.js" type="text/javascript"></script>
+    <script src="./ui/chat-window.js" type="text/javascript"></script>
+    <script src="./ui/chat-console.js" type="text/javascript"></script>
+    <script src="./ui/chat-nav-list.js" type="text/javascript"></script>
+    <script src="./ui/chat-console-header.js" type="text/javascript"></script>
+    <script src="./ui/chat-console-msgs.js" type="text/javascript"></script>
+    <script src="./ui/chat-console-dynamicForms.js" type="text/javascript"></script>
+    <script src="./ui/seed.js" type="text/javascript"></script>
+    <script src="./ui/route.js" type="text/javascript"></script>
+    <script src="./ui/routes.js" type="text/javascript"></script>
+    <script src="./ui/router.js" type="text/javascript"></script>
+    <script src="./ui/app.js" type="text/javascript"></script>
+    <script src="./ui/index.js" type="text/javascript"></script>
 </html>
