--- a/devcore/engine.html
+++ b/devcore/engine.html
@@ -1,6 +1,6 @@
 <html>
   <body id="root"></body>
-  <script type="/text/javascript" src="./ui/data"></script>
+  <script type="text/javascript" src="./ui/data"></script>
   <script type="text/javascript" filename="Engine.js">
     class Engine {
       constructor(functions) {
