--- a/devcore/hash-simple.html
+++ b/devcore/hash-simple.html
@@ -1,6 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./ui/data.js"></script>
+    <script type="text/javascript" src="./ui/Data.js"></script>
     <script type="text/javascript">
         function simpleHash(data) {
             let result = 0;
