--- a/ui/router.html
+++ b/ui/router.html
@@ -1,6 +1,7 @@
 <html>
     <body id="root"></body>
     <script type="text/javascript" src="./DevCore/Data.js"></script>
+    <script type="text/javascript" src="./ui/UINode.js">
     <script type="text/javascript" filename="Router.js">
         class Router extends UINode {
             constructor(app){
