--- a/devcore/devcore.html
+++ b/devcore/devcore.html
@@ -1,9 +1,28 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./ui/data.js"></script>
-    <script type="text/javascript" src="./ui/builder.js"></script>
-    <script type="text/javascript" src="./ui/application.js></script>
-    <script type="text/javascript" src="./ui/api.js"></script>
+    <script type="text/javascript" src="./DevCore/Data.js"></script>
+    <script type="text/javascript" src="./DevCore/Builder.js"></script>
+    <script type="text/javascript" src="./DevCore/Application.js></script>
+    <script type="text/javascript" src="./DevCore/API.js"></script>
+    <script type="text/javascript" src="./DevCore/AI.js"></script>
+    <script type="text/javascript" src="./DevCore/_A_L_L_.js"></script>
+    <script type="text/javascript" src="./DevCore/Component.js"></script>
+    <script type="text/javascript" src="./DevCore/Constructor.js"></script>
+    <script type="text/javascript" src="./DevCore/Data.FunC.js"></script>
+    <script type="text/javascript" src="./DevCore/Data.js"></script>
+    <script type="text/javascript" src="./DevCore/Engine.js"></script>
+    <script type="text/javascript" src="./DevCore/FrameWork.js"></script>
+    <script type="text/javascript" src="./DevCore/Hash-Simple.js"></script>
+    <script type="text/javascript" src="./DevCore/Libary.js"></script>
+    <script type="text/javascript" src="./DevCore/List.js"></script>
+    <script type="text/javascript" src="./DevCore/Module.js"></script>
+    <script type="text/javascript" src="./DevCore/NodeLinkedList.js"></script>
+    <script type="text/javascript" src="./DevCore/Operators.js"></script>
+    <script type="text/javascript" src="./DevCore/OperatingSystem.js"></script>
+    <script type="text/javascript" src="./DevCore/Param.js"></script>
+    <script type="text/javascript" src="./DevCore/Server.js"></script>
+    <script type="text/javascript" src="./DevCore/Task.js"></script>
+    <script type="text/javascript" filename="DevCore.js">
         class DevCore {
             constructor(){
                 this.techstack = { // techstack means how everything is interfaced to eachother
