--- a/app.channelweb.html
+++ b/app.channelweb.html
@@ -1,22 +1,20 @@
 <html>
     <body id="root"></body>
     <script type="text/javascript" src="./DevCore/DevCore.html"></script>
-    <script src="./ui/ui-node.js" type="text/javascript"></script>
-    <script src="./ui/ui-node-manager.js" type="text/javascript"></script>
-    <script src="./ui/chat-bubble.js" type="text/javascript"></script>
-    <script src="./ui/chat-window.js" type="text/javascript"></script>
-    <script src="./ui/chat-console.js" type="text/javascript"></script>
-    <script src="./ui/chat-nav-list.js" type="text/javascript"></script>
-    <script src="./ui/chat-console-header.js" type="text/javascript"></script>
-    <script src="./ui/chat-console-msgs.js" type="text/javascript"></script>
-    <script src="./ui/chat-console-dynamicForms.js" type="text/javascript"></script>
-    <script src="./ui/seed.js" type="text/javascript"></script>
-    <script src="./ui/route.js" type="text/javascript"></script>
-    <script src="./ui/routes.js" type="text/javascript"></script>
-    <script src="./ui/router.js" type="text/javascript"></script>
-    <script src="./ui/app.js" type="text/javascript"></script>
-    <script src="./ui/index.js" type="text/javascript"></script>
-    <script type="text/javascript">
+    <script type="text/javascript" src="./ui/ui-node.js"></script>
+    <script type="text/javascript" src="./ui/ui-node-manager.js"></script>
+    <script type="text/javascript" src="./ui/chat-bubble.js"></script>
+    <script type="text/javascript" src="./ui/chat-window.js"></script>
+    <script type="text/javascript" src="./ui/chat-console.js"></script>
+    <script type="text/javascript" src="./ui/chat-nav-list.js"></script>
+    <script type="text/javascript" src="./ui/chat-console-header.js"></script>
+    <script type="text/javascript" src="./ui/chat-console-msgs.js"></script>
+    <script type="text/javascript" src="./ui/chat-console-dynamicForms.js"></script>
+    <script type="text/javascript" src="./ui/seed.js"></script>
+    <script type="text/javascript" src="./ui/route.js"></script>
+    <script type="text/javascript" src="./ui/routes.js"></script>
+    <script type="text/javascript" src="./ui/router.js"></script>
+    <script type="text/javascript" filename="app.ChannelWeb.html">
         new DevCore()
             .Application(
                 {
