Update and rename app.channelweb.html to app.ChannelWeb.html

--- a/app.ChannelWeb.html
+++ b/app.ChannelWeb.html
@@ -1,4 +1,23 @@
-<html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ChannelWeb</title>
+<meta name="description" content="A brief description of my web page.">
+
+<meta property="og:title" content="ChannelWeb">
+<meta property="og:description" content="ChannelWeb yeaaa">
+<meta property="og:image" content="image.jpg">
+<script type="application/ld+json">
+<!--     {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "My Web Page",
+      "description": "A brief description of my web page.",
+      "inLanguage": "en",
+      "url": "https://www.example.com"
+    } -->
+</script>
     <body id="root"></body>
     <script type="text/javascript" src="./DevCore/DevCore.html"></script>
     <script type="text/javascript" src="./ui/ui-node.js"></script>
