--- a/models/account.html
+++ b/models/account.html
@@ -1,38 +1,48 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/mongoose.js">
-        function(mongoose) {
-            const AccountSchema = new mongoose.Schema({
-                username: {
-                    type: String,
-                    required: true,
-                },
-                userType: {
-                    enum: ["AI", "PPL"],
-                    required: true,
-                },
-                priveledge: {
-                    enum: ["Parent","Child"]        // parent is admin ... childs are basic user ... node parent ... child relationship
-                },
-                email: {
-                    type: String,
-                    required: true,
-                },
-                bcryptedPassword: {
-                    type: String,
-                    required: true,
-                },
-                loggedIn: {
-                    type: Boolean,
-                    default: false,
-                },
-                orgName: {  // organization name
-                    type: String,
-                    required: true,
-                },
-            });
-            const Account = mongoose.model('Account', AccountSchema);
-            return PPL;
-        }
+    <script type="text/javascript" src="./DevCore/DevCore.js"></script>
+    <script type="text/javascript">
+        new DevCore().FunC({
+            name: "Account",
+            description: "User can edit there Account",
+            paramsIn: [
+                {
+                    username:{
+                        type: String,
+                        required: true,
+                    },
+                    userType: {
+                        enum: ["AI", "PPL"],
+                        required: true,
+                    },
+                    priveledge: {
+                        enum: ["Parent","Child"]        // parent is admin ... childs are basic user ... node parent ... child relationship
+                    },
+                    email: {
+                        type: String,
+                        required: true,
+                    },
+                    bcryptedPassword: {
+                        type: String,
+                        required: true,
+                    },
+                    loggedIn: {
+                        type: Boolean,
+                        default: false,
+                    },
+                    orgName: {  // organization name
+                        type: String,
+                        required: true,
+                    }
+                }),
+            ],
+            paramsOut: [],
+            block: function(){
+                
+            },
+            spec: function(){
+                
+            },
+        });
     </script>
 </html>
