--- a/app.ChannelWeb.html
+++ b/app.ChannelWeb.html
@@ -1,39 +1,40 @@
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ChannelWeb</title>
-<meta name="description" content="A brief description of my web page.">
-
-<meta property="og:title" content="ChannelWeb">
-<meta property="og:description" content="ChannelWeb yeaaa">
-<meta property="og:image" content="image.jpg">
-<script type="application/ld+json">
-<!--     {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "My Web Page",
-      "description": "A brief description of my web page.",
-      "inLanguage": "en",
-      "url": "https://www.example.com"
-    } -->
-</script>
-    <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/DevCore.html"></script>
-    <script type="text/javascript" src="./ui/ui-node.js"></script>
-    <script type="text/javascript" src="./ui/ui-node-manager.js"></script>
-    <script type="text/javascript" src="./ui/chat-bubble.js"></script>
-    <script type="text/javascript" src="./ui/chat-window.js"></script>
-    <script type="text/javascript" src="./ui/chat-console.js"></script>
-    <script type="text/javascript" src="./ui/chat-nav-list.js"></script>
-    <script type="text/javascript" src="./ui/chat-console-header.js"></script>
-    <script type="text/javascript" src="./ui/chat-console-msgs.js"></script>
-    <script type="text/javascript" src="./ui/chat-console-dynamicForms.js"></script>
-    <script type="text/javascript" src="./ui/seed.js"></script>
-    <script type="text/javascript" src="./ui/route.js"></script>
-    <script type="text/javascript" src="./ui/routes.js"></script>
-    <script type="text/javascript" src="./ui/router.js"></script>
-    <script type="text/javascript" filename="app.ChannelWeb.html">
+      <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>ChannelWeb</title>
+            <meta name="description" content="A brief description of my web page.">
+            
+            <meta property="og:title" content="ChannelWeb">
+            <meta property="og:description" content="ChannelWeb yeaaa">
+            <meta property="og:image" content="image.jpg">
+            <script type="application/ld+json">
+            <!--     {
+                  "@context": "https://schema.org",
+                  "@type": "WebPage",
+                  "name": "My Web Page",
+                  "description": "A brief description of my web page.",
+                  "inLanguage": "en",
+                  "url": "https://www.example.com"
+                } -->
+            </script>
+      </head>
+      <body id="root"></body>
+      <script type="text/javascript" src="./DevCore/DevCore.html"></script>
+      <script type="text/javascript" src="./ui/ui-node.js"></script>
+      <script type="text/javascript" src="./ui/ui-node-manager.js"></script>
+      <script type="text/javascript" src="./ui/chat-bubble.js"></script>
+      <script type="text/javascript" src="./ui/chat-window.js"></script>
+      <script type="text/javascript" src="./ui/chat-console.js"></script>
+      <script type="text/javascript" src="./ui/chat-nav-list.js"></script>
+      <script type="text/javascript" src="./ui/chat-console-header.js"></script>
+      <script type="text/javascript" src="./ui/chat-console-msgs.js"></script>
+      <script type="text/javascript" src="./ui/chat-console-dynamicForms.js"></script>
+      <script type="text/javascript" src="./ui/seed.js"></script>
+      <script type="text/javascript" src="./ui/route.js"></script>
+      <script type="text/javascript" src="./ui/routes.js"></script>
+      <script type="text/javascript" src="./ui/router.js"></script>
+      <script type="text/javascript" filename="app.ChannelWeb.html">
         new DevCore()
             .Application(
                 {
@@ -57,5 +58,5 @@
                     "devDependencies": {},
                   }
             ).run();
-    </script>
+      </script>
 </html>
