Update and rename app.ChannelWeb.html to app.ChannelWebAI.html

--- a/app.ChannelWebAI.html
+++ b/app.ChannelWebAI.html
@@ -5,7 +5,7 @@
             <title>ChannelWeb</title>
             <meta name="description" content="A brief description of my web page.">
             
-            <meta property="og:title" content="ChannelWeb">
+            <meta property="og:title" content="ChannelWebAI">
             <meta property="og:description" content="ChannelWeb yeaaa">
             <meta property="og:image" content="image.jpg">
             <script type="application/ld+json">
@@ -44,15 +44,15 @@
                     "keywords": ["awesome", "great", "package"],
                     "author": "Devon Houghton <1.a.b.c.0.0.0.x.y.z.1@gmail.com>",
                     "license": "none",
-                    "main": "app.ChannelWeb.html",
+                    "main": "app.ChannelWebAI.html",
                     "files": ["index.js", "README.md"],
                     "scripts": {
                       "test": "mocha",
-                      "start": "wwwnode app.ChannelWeb.html",
+                      "start": "wwwnode app.ChannelWebAI.html",
                     },
                     "repository": {
                       "type": "git",
-                      "url": "https://github.com/az000za/ChannelWeb.html"
+                      "url": "https://github.com/az000za/ChannelWebAI.html"
                     },
                     "dependencies": {},
                     "devDependencies": {},
