--- a/devcore/www-app-node.html
+++ b/devcore/www-app-node.html
@@ -1,13 +1,17 @@
 <html>
   <body id="root">
+    <div>
+      Run wwwnode directly
+        - in a dedicated browser
+        - in a dedicated browser tab
+        - on your machine
+    </div>
     <button onclick="saveScriptContent()">Save wwwnode and then execute it.</button>
     <div>
       Once wwwnode application is saved. 
       Open a terminal in the directory of the saved file.
       In the terminal. Type in the command
-
       node wwwnode.js <app.html file here>
-
     </div>
   </body>
 <script type="text/javascript">
