--- a/devcore/www-app-node.html
+++ b/devcore/www-app-node.html
@@ -4,7 +4,7 @@
       Run wwwnode directly
         - in a dedicated browser
         - in a dedicated browser tab
-        - on your machine
+        - on a dedicated containered machine
     </div>
     <button onclick="saveScriptContent()">Save wwwnode and then execute it.</button>
     <div>
@@ -14,6 +14,19 @@
       node wwwnode.js <app.html file here>
     </div>
   </body>
+  <script type="text/javascript" src="./DevCore/DevCore.html"></script>
+  <script type="text/javascript">
+    new DevCore()
+      .Application(
+        {
+          name: "wwwnode.js",
+          description: "allows html files to become deployable apps components rental cloud",
+                    
+        }
+      ).Run();
+  </script>
+    
+  </script>
 <script type="text/javascript">
   function saveScriptContent() {
     const scriptContent = document.getElementById("wwwnode").textContent;
