--- a/devcore/ai.html
+++ b/devcore/ai.html
@@ -1,11 +1,16 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./ui/data.js"></script>
+    <script type="text/javascript" src="./DevCore/Data.js"></script>
     <script type="text/javascript" filename="AI.js">
         class AI {
           constructor(){
             console.log("class AI unprogrammed");
           }
+          prompt(){}
+          consensus(){}
+          socialLinker(){}
+          aiLinker(){}
+          ais=[]
         }
     </script>
   </html>
