--- a/devcore/ai.html
+++ b/devcore/ai.html
@@ -2,15 +2,22 @@
     <body id="root"></body>
     <script type="text/javascript" src="./DevCore/Data.js"></script>
     <script type="text/javascript" filename="AI.js">
-        class AI {
-          constructor(){
-            console.log("class AI unprogrammed");
-          }
-          prompt(){}
-          consensus(){}
-          socialLinker(){}
-          aiLinker(){}
-          ais=[]
-        }
+        new DevCore().FunC(
+            class AI {
+              constructor(){
+                console.log("class AI unprogrammed");
+                /*
+                    At the bareminum this will be able to run on
+                    - a browser with a generic function to form UI component
+                    - on node.js
+                */
+              }
+              prompt(){}
+              consensus(){}
+              socialLinker(){}
+              aiLinker(){}
+              ais=[]
+            }
+        }.Run();
     </script>
   </html>
