--- a/devcore/Program.html
+++ b/devcore/Program.html
@@ -1,6 +1,6 @@
 <html>
   <body id="root"></body>
-  <script type="text/javascript" src="./DevCore/DevCore.Data">
+  <script type="text/javascript" src="./DevCore/DevCore.Data.html">
     class Program {
         constructor(){
           /*
