--- a/devcore/engine.html
+++ b/devcore/engine.html
@@ -1,7 +1,7 @@
 <html>
   <body id="root"></body>
   <script type="text/javascript" src="./ui/data"></script>
-  <script type="text/javascript" filename="Engine.js">
+  <script type="text/javascript" filename="ExeEngine.js">
     class ExeEngine {
       constructor(functions) {
         this.functions = functions;
