--- a/devcore/engine.html
+++ b/devcore/engine.html
@@ -8,6 +8,11 @@
         this.graph = createDependencyGraph(functions);
         this.visited = new Set();
         this.order = [];
+
+        this.entryNode = {  // creates an entry node to lead to next functions
+          
+        };
+        
         this.lastNode = { // how do the previousNodes get deleted to not suck up memory?
           fn: Function,
           cycle: 0,
