--- a/devcore/engine.html
+++ b/devcore/engine.html
@@ -9,6 +9,13 @@
         this.visited = new Set();
         this.order = [];
 
+        // needs to have kind of essential cycles seperate from
+        // the requested functions to execute
+        // such as what to do when no more functions to execute
+        // or how do I pause the engine?
+        // or how do I delete the nodes
+
+        
         this.entryNode = {  // creates an entry node to lead to next functions
           
         };
