--- a/models/account.html
+++ b/models/account.html
@@ -1,6 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/DevCore.js"></script>
+    <script type="text/javascript" src="./DevCore/DevCore.html"></script>
     <script type="text/javascript">
         new DevCore().FunC({
             name: "Account",
@@ -34,7 +34,7 @@
                         type: String,
                         required: true,
                     }
-                }),
+                }
             ],
             paramsOut: [],
             block: function(){
