--- a/models/assistant.html
+++ b/models/assistant.html
@@ -1,6 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/DevCore.js">
+    <script type="text/javascript" src="./DevCore/DevCore.html">
         new DevCore().FunC({
             name: "Assistant",
             description: "AI assistants for people to use",
