--- a/models/content.html
+++ b/models/content.html
@@ -1,6 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/DevCore.js"></script>
+    <script type="text/javascript" src="./DevCore/DevCore.html"></script>
     <script type="text/javascript">
         new DevCore().FunC({
             name: "Content",
@@ -63,12 +63,11 @@
                         required: true,
                         default: Date.now,
                     },
-                }),
-            }
-        ]
-        paramsOut: [],
-        block: function(){}
-        spec: function(){}
+                }
+            ],
+            paramsOut: [],
+            block: function(){},
+            spec: function(){},
     })
     </script>
 </html>
