--- a/ui/app.html
+++ b/ui/app.html
@@ -1,18 +1,18 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/DevCore.js"></script>
-    <script type="text/javascript" src="./ui/ChatConsole.js"></script>
-    <script type="text/javascript" src="./ui/ChatNavList.js"></script>
-    <script type="text/javascript" src="./ui/ChatConsoleHeader.js"></script>
-    <script type="text/javascript" src="./ui/ChatConsoleMsgs.js"></script>
-    <script type="text/javascript" src="./ui/ChatConsoleDynamicForms.js"></script>
-    <script type="text/javascript" src="./ui/UINode.js"></script>
-    <script type="text/javascript" src="./ui/UINodeManager.js"></script>
-    <script type="text/javascript" src="./ui/Seed.js"></script>
-    <script type="text/javascript" src="./ui/Routes.js"></script>
-    <script type="text/javascript" src="./ui/Router.js"></script>
-    <script type="text/javascript" src="./ui/Route.js"></script>
-    <script type="text/javascript" filename="App.js">
+    <script type="text/javascript" src="./DevCore/DevCore.html"></script>
+    <script type="text/javascript" src="./ui/ChatConsole.html"></script>
+    <script type="text/javascript" src="./ui/ChatNavList.html"></script>
+    <script type="text/javascript" src="./ui/ChatConsoleHeader.html"></script>
+    <script type="text/javascript" src="./ui/ChatConsoleMsgs.html"></script>
+    <script type="text/javascript" src="./ui/ChatConsoleDynamicForms.html"></script>
+    <script type="text/javascript" src="./ui/UINode.html"></script>
+    <script type="text/javascript" src="./ui/UINodeManager.html"></script>
+    <script type="text/javascript" src="./ui/Seed.html"></script>
+    <script type="text/javascript" src="./ui/Routes.html"></script>
+    <script type="text/javascript" src="./ui/Router.html"></script>
+    <script type="text/javascript" src="./ui/Route.html"></script>
+    <script type="text/javascript" filename="App.html">
         function App() {
             const __MEM__ = new (class MEM {
                 constructor(){
