--- a/ui/chat-bubble.html
+++ b/ui/chat-bubble.html
@@ -1,7 +1,7 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/DevCore.js"></script>
-    <script type="text/javascript" src="./ui/UINode.js"></script>
+    <script type="text/javascript" src="./DevCore/DevCore.html"></script>
+    <script type="text/javascript" src="./ui/UINode.html"></script>
     <script type="text/javascript">
         class ChatBubble extends UINode {
             // const chatBubble = (
