--- a/ui/chat-window.html
+++ b/ui/chat-window.html
@@ -1,7 +1,7 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/Data.js"></script>
-    <script type="text/javascript" src="./ui/UINode.js"></script>
+    <script type="text/javascript" src="./DevCore/Data.html"></script>
+    <script type="text/javascript" src="./ui/UINode.html"></script>
     <script type="text/javascript" filename="ChatWindow">
         class ChatWindow extends UINode {
             constructor(app){
@@ -43,5 +43,3 @@
         }
     </script>
 </html>
-
-
