--- a/ui/chat-console-dynamicForms.html
+++ b/ui/chat-console-dynamicForms.html
@@ -1,6 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/Data.js"></script>
+    <script type="text/javascript" src="./DevCore/Data.html"></script>
     <script type="text/javascript" src="./ui/UINode.js></script>
     <script type="text/javascript">
         class ChatConsoleDynamicForms extends UINode {
