--- a/ui/chat-console-header.html
+++ b/ui/chat-console-header.html
@@ -1,7 +1,7 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/Data.js"></script>
-    <script type="text/javascript" src="./ui/UINode.js"></script>
+    <script type="text/javascript" src="./DevCore/Data.html"></script>
+    <script type="text/javascript" src="./ui/UINode.html"></script>
         class ChatConsoleHeader extends UINode {
             constructor(app){
                 super(app);
