--- a/ui/chat-console-msgs.html
+++ b/ui/chat-console-msgs.html
@@ -1,7 +1,7 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/Data.js"></script>
-    <script type="text/javascript" src="./ui/UINode.js"></script>
+    <script type="text/javascript" src="./DevCore/Data.html"></script>
+    <script type="text/javascript" src="./ui/UINode.html"></script>
     <script type="text/javascript">
         class ChatConsoleMsgs extends UINode {
             constructor(app){
