--- a/ui/chat-console.html
+++ b/ui/chat-console.html
@@ -1,6 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/Data.js"></script>
+    <script type="text/javascript" src="./DevCore/Data.html"></script>
     <script type="text/javascript">
         class ChatConsole extends UINode {
             constructor(app){
