--- a/ui/route.html
+++ b/ui/route.html
@@ -1,7 +1,7 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/Data.js"></script>
-    <script type="text/javascript" filename="Route.js">
+    <script type="text/javascript" src="./DevCore/Data.html"></script>
+    <script type="text/javascript" filename="Route.html">
         class Route {
             constructor(obj){
                 // super();
