--- a/ui/router.html
+++ b/ui/router.html
@@ -1,8 +1,11 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/Data.js"></script>
-    <script type="text/javascript" src="./ui/UINode.js">
-    <script type="text/javascript" filename="Router.js">
+    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
+        const APPS = importHTMLAPP([
+        "./DevCore/UINode.html",
+        ]);
+    </script>
+    <script type="text/javascript" filename="Router.html">
         class Router extends UINode {
             constructor(app){
                 super(app);
