--- a/ui/routes.html
+++ b/ui/routes.html
@@ -1,6 +1,10 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/Data.js"></script>
+    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
+        const APPS = importHTMLAPP([
+        "./DevCore/Data.html",
+        ]);
+    </script>
     <script type="text/javascript">
         class Routes {
             /**
