--- a/ui/ui-node.html
+++ b/ui/ui-node.html
@@ -1,6 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./devcore/Data.js"></script>
+    <script type="text/javascript" src="./devcore/Data.html"></script>
     <script type="text/javascript">
         class UINode {
             id = null;
