--- a/DevCore/Hive.html
+++ b/DevCore/Hive.html
@@ -3,11 +3,7 @@
     Executes Any Requested Function
     Available on wwwnode network.
   </body>
-  <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-    const APPS = importHTMLAPP([
-    "./DevCore/Data.html",
-    ]);
-  </script>
+  <script type="text/javascript" src="./DevCore/DevCore.js"></script>
   <script src="text/javascript">
       new DevCore()
         .FunC(
