--- a/DevCore/application.html
+++ b/DevCore/application.html
@@ -1,10 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-      const APPS = importHTMLAPP([
-      "./DevCore/Data.html",
-      ]);
-  </script>
+    <script type="text/html" src="./data.html"></script>
     <script type="text/javascript" filename="application.html">
        class Application {
             constructor(obj) {
