--- a/DevCore/builder.html
+++ b/DevCore/builder.html
@@ -1,11 +1,7 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-        const APPS = importHTMLAPP([
-        "./DevCore/Data.FunC.html",
-        ]);
-    </script>
-    <script type="text/javascript" filename="./Builder.html">
+    <script type="text/javascript" src="./ui/data.js"></script>
+    <script type="text/javascript" filename="./ui/data.js">
         class Builder {
             constructor(actions){
                 console.log(actions)
@@ -46,5 +42,4 @@
                 });          
             }
         }
-    </script>
 </html>
