--- a/DevCore/constructor.html
+++ b/DevCore/constructor.html
@@ -1,10 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-        const APPS = importHTMLAPP([
-        "./DevCore/Data.FunC.html",
-        ]);
-    </script>
+    <script type="text/javascript" src="./ui/data.js"></script>
     <script type="text/javascript">
         // All rule to follow. // all functions have inputs that derived from a type creation //
         // this will make it so programs can get auto created.
