--- a/DevCore/engine.html
+++ b/DevCore/engine.html
@@ -1,12 +1,7 @@
 <html>
   <body id="root"></body>
-  <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-    const APPS = importHTMLAPP([
-    "./DevCore/Data.html",
-    "./DevCore/Server.html",
-    ]);
-  </script>
-  <script type="text/javascript" filename="ExeEngine.html">
+  <script type="text/javascript" src="./ui/data"></script>
+  <script type="text/javascript" filename="ExeEngine.js">
     class ExeEngine {
       constructor(functions) {
         this.functions = functions;
