--- a/DevCore/framework.html
+++ b/DevCore/framework.html
@@ -1,11 +1,7 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-      const APPS = importHTMLAPP([
-      "./DevCore/Data.html",
-      ]);
-    </script>
-    <script type="text/javascript" filename="Framework.html">
+    <script type="text/javascript" src="./ui/Data.js"></script>
+    <script type="text/javascript" filename="Framework.js">
         class Framework {
             constructor(name, description, components) {
               this.name = name;
