--- a/DevCore/library.html
+++ b/DevCore/library.html
@@ -1,9 +1,5 @@
 <html>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-      const APPS = importHTMLAPP([
-      "./DevCore/Data.html",
-      ]);
-    </script>
+    <script type="text/javascript"></script>
     <script type="text/javascript"></script>
         class Library {
             constructor(name, description, modules) {
@@ -28,4 +24,4 @@
             }
           }
     </script>
-</html>
+</html>  
