--- a/DevCore/os.html
+++ b/DevCore/os.html
@@ -1,10 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-      const APPS = importHTMLAPP([
-      "./DevCore/Data.html",
-      ]);
-    </script>
+    <script type="text/javascript" src="./ui/Data.js"></script>
     <script type="text/javascript"></script>
         class OPERATINGSYSTEM {
             constructor(name, version, kernel) {
