--- a/DevCore/www-app-node.html
+++ b/DevCore/www-app-node.html
@@ -19,8 +19,9 @@
     new DevCore()
       .Application(
         {
-          name: "wwwnode.html",
-          description: "allows html files to become deployable apps components rental cloud",                    
+          name: "wwwnode.js",
+          description: "allows html files to become deployable apps components rental cloud",
+                    
         }
       ).Run();
   </script>
@@ -76,7 +77,7 @@
     backend functions.
     html just needs a config form script that auto deploys everything you work on.
     such as 
-    <script type="" src="./DeployThisApp.html"></script>
+    <script type="" src="./DeployThisApp.js"></script>
     <img type="" src=""></img>
   
     imagine how much simpler everything would be if we could just code in html.
@@ -210,9 +211,9 @@
   // const path = require('path');
   
   
-  // const Site = require("./controllers/controller.site.html);
-  // const Static = require("./controllers/controller.static.html);
-  // // const AI = require("./controllers/controller.ai.html);
+  // const Site = require("./controllers/controller.site.js");
+  // const Static = require("./controllers/controller.static.js");
+  // // const AI = require("./controllers/controller.ai.js");
   // // const Auth = require("./")
   
   // const server = http.createServer((req, res) => { // onRequest
