--- a/DevCore/Package.html
+++ b/DevCore/Package.html
@@ -1,11 +1,7 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-      const APPS = importHTMLAPP([
-      "./DevCore/Data.html",
-      ]);
-    </script>
-    <script type="text/javascript" filename="Package.html"></script>
+    <script type="text/javascript" src="./ui/Data.js"></script>
+    <script type="text/javascript" filename="Package.js"></script>
         class Package {
             constructor(name, author, description, version, dependencies) {
               this.name = name;
