--- a/DevCore/Program.html
+++ b/DevCore/Program.html
@@ -1,11 +1,6 @@
 <html>
   <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-      const APPS = importHTMLAPP([
-      "./DevCore/Data.html",
-      ]);
-    </script>
-    <script type="text/javascript">
+  <script type="text/javascript" src="./DevCore/DevCore.Data.html">
     class Program {
         constructor(){
           /*
