--- a/DevCore/data.funC.html
+++ b/DevCore/data.funC.html
@@ -1,11 +1,6 @@
 <html>
     <body id="root"></body>
-      <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-        const APPS = importHTMLAPP([
-        "./DevCore/Data.html",
-        "./DevCore/Engine.html",
-        ]);
-    </script>
+    <script type="text/javascript" src="./ui/data.js"></script>
     <script type="text/javascript"></script>
         class FunC extends Data {
             constructor(obj){
