--- a/DevCore/devcore.html
+++ b/DevCore/devcore.html
@@ -1,92 +1,92 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-        const APPS = importHTMLAPP([
-        "./DevCore/Data.html",
-        "./DevCore/Builder.html",
-        "./DevCore/Application.html",
-        "./DevCore/API.html",
-        "./DevCore/AI.html",
-        "./DevCore/_A_L_L_.html",
-        "./DevCore/Component.html",
-        "./DevCore/Constructor.html",
-        "./DevCore/Data.FunC.html",
-        "./DevCore/Data.html",
-        "./DevCore/Engine.html",
-        "./DevCore/FrameWork.html",
-        "./DevCore/Hash-Simple.html",
-        "./DevCore/Libary.html",
-        "./DevCore/List.html",
-        "./DevCore/Module.html",
-        "./DevCore/NodeLinkedList.html",
-        "./DevCore/Operators.html",
-        "./DevCore/OperatingSystem.html",
-        "./DevCore/Param.html",
-        "./DevCore/Server.html",
-        "./DevCore/Task.html",
-        ]);
-    </script>
+    <script type="text/javascript" src="./DevCore/importHTMLAPP.js"></script>
     <script type="text/javascript" filename="DevCore.html">
+        const WEBAPPS = importHTMLAPP([
+            './DevCore/Data.html',
+            './DevCore/Builder.html',
+            './DevCore/Application.html',
+            './DevCore/API.html',
+            './DevCore/AI.html',
+            './DevCore/_A_L_L_.html',
+            './DevCore/Component.html',
+            './DevCore/Constructor.html',
+            './DevCore/Data.FunC.html',
+            './DevCore/Engine.html',
+            './DevCore/FrameWork.html',
+            './DevCore/Hash-Simple.html',
+            './DevCore/Libary.html',
+            './DevCore/List.html',
+            './DevCore/Module.html',
+            './DevCore/NodeLinkedList.html',
+            './DevCore/Operators.html',
+            './DevCore/OperatingSystem.html',
+            './DevCore/Param.html',
+            './DevCore/Server.html',
+            './DevCore/Task.html'
+        ]);
         class DevCore {
             constructor(){
                 this.techstack = { // techstack means how everything is interfaced to eachother
-                    AI: function(){},
+                    AI: function(){
+                        return new WEBAPPS.AI(...arguments);
+                    },
                     _A_L_L_: function(){
-                        return new _A_L_L_();
+                        return new WEBAPPS._A_L_L_(...arguments);
                     },
                     // Param: function(){
-                    //     return new Param();
+                    //     return new WEBAPPS.Param(...arguments);
                     // },
                     Computer: function(){
-                        return new Computer();
+                        return new WEBAPPS.Computer(...arguments);
                     },
                     OperatingSystem: function(){
-                        return new OperatingSystem();
+                        return new WEBAPPS.OperatingSystem(...arguments);
                     },
                     Data: function(){
-                        return new Data();
+                        return new WEBAPPS.Data(...arguments);
                     },
                     Builder: function(){
-                        return new Builder(this);
+                        return new WEBAPPS.Builder(this);
                     },
                     Program: function(){
-                        return new Program(...arguments);
+                        return new WEBAPPS.Program(...arguments);
                     },
                     Engine: function(){
-                        return new Engine(...arguments);
+                        return new WEBAPPS.Engine(...arguments);
                     },
                     FunC: function(){
-                        return new FunC(...arguments);
+                        return new WEBAPPS.FunC(...arguments);
                     },
                     // Task: function(){
-                    //     return new Task(...arguments);
+                    //     return new WEBAPPS.Task(...arguments);
                     // },
                     Module: function(){
-                        return new Module();
+                        return new WEBAPPS.Module(...arguments);
                     },
                     Package: function(){
-                        return new Package();
+                        return new WEBAPPS.Package(...arguments);
                     },
                     Component: function(){
-                        return new Component();
+                        return new WEBAPPS.Component(...arguments);
                     },
                     Library: function(){
-                        return new Library();
+                        return new WEBAPPS.Library(...arguments);
                     },
                     FrameWork: function(){
-                        return new FrameWork();
+                        return new WEBAPPS.FrameWork(...arguments);
                     },
                     Server: function(){
-                        return new Server();
+                        return new WEBAPPS.Server(...arguments);
                     },
                     API: function(){
-                        return new API();
+                        return new WEBAPPS.API(...arguments);
                     },
                     UI: function(){
                         // makes any function into a form
                     },
                     Application: function(){
-                        return new Application(...arguments);
+                        return new WEBAPPS.Application(...arguments);
                     },
                 }
             }
