--- a/DevCore/module.html
+++ b/DevCore/module.html
@@ -1,11 +1,7 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-      const APPS = importHTMLAPP([
-      "./DevCore/Data.html",
-      ]);
-    </script>
-    <script type="text/javascript" filename="Module.html"></script>
+    <script type="text/javascript" src="./ui/data.js"></script>
+    <script type="text/javascript" filename="Module.js"></script>
         class Module {
             constructor(name, description) {
               this.name = name;
