--- a/DevCore/task.html
+++ b/DevCore/task.html
@@ -1,10 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
-      const APPS = importHTMLAPP([
-      "./DevCore/Data.html",
-      ]);
-    </script>
+    <script type="text/javascript" src="./ui/data.js"></script>
     <script type="text/javascript">
         class Task {
             constructor(id, name, description, status, priority, dueDate) {
