--- a/ui/ui-node-manager.html
+++ b/ui/ui-node-manager.html
@@ -1,23 +1,28 @@
-class UINodeManager{
-    uiNodes = {}
-    ids = 0;
-    constructor(app){
-        
-    }
-    insertNode(uiNode){
-        uiNode.id = this.id;
-        this.uiNodes[this.ids++] = uiNode;
-    }
-    removeNode(){
+<html>
+    <body id="root"></body>
+    <script type="text/javascript" filename="ui-node-manager.html">
+        class UINodeManager{
+            uiNodes = {}
+            ids = 0;
+            constructor(app){
+                
+            }
+            insertNode(uiNode){
+                uiNode.id = this.id;
+                this.uiNodes[this.ids++] = uiNode;
+            }
+            removeNode(){
 
-    }
-    updateNode(uiNode){
+            }
+            updateNode(uiNode){
 
-    }
-    updateNodes(uiNodes){
-        console.log('this.uiNodes',this.uiNodes);
-    }
-    renderNode(){
+            }
+            updateNodes(uiNodes){
+                console.log('this.uiNodes',this.uiNodes);
+            }
+            renderNode(){
 
-    }
-}
+            }
+        }
+    </script>
+</html>
