--- a/ui/route.html
+++ b/ui/route.html
@@ -1,6 +1,6 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/Data.js"></script>
+    <script type="text/javascript" src="https://az000za.github.io/ChannelWebAI/DevCore/Data.js"></script>
     <script type="text/javascript" filename="Route.js">
         class Route {
             constructor(obj){
