--- a/app.ChannelWebAI.html
+++ b/app.ChannelWebAI.html
@@ -19,11 +19,11 @@
             </script>
       </head>
       <body id="root"></body>
-      <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js"></script>
+      <script type="text/javascript" src="https://az000za.github.io/AZ000ZA/DevCore/ImportHTMLAPP.js"></script>
       <script type="text/javascript" filename="app.ChannelWeb.html">
         const WEBAPPS = importHTMLAPP([
           "https://az000za.github.io/AZ000ZA/app.PeerNet.html",
-          "https://az000za.github.io/AZ000ZA/./DevCore/DevCore.html",
+          "https://az000za.github.io/AZ000ZA/DevCore/DevCore.html",
           "https://az000za.github.io/AZ000ZA/ui/ui-node.html",
           "https://az000za.github.io/AZ000ZA/ui/ui-node-manager.html",
           "https://az000za.github.io/AZ000ZA/ui/chat-bubble.html",
