--- a/ChannelWebAI.html
+++ b/ChannelWebAI.html
@@ -20,7 +20,7 @@
       </head>
       <body id="root"></body>
       <script type="text/javascript" src="https://az000za.github.io/AZ000ZA/DevCore/importHTMLAPP.js"></script>
-      <script type="text/javascript" filename="app.ChannelWeb.html">
+      <script type="text/javascript" filename="ChannelWeb.html">
         const WEBAPPS = importHTMLAPP([
           "https://az000za.github.io/AZ000ZA/app.PeerNet.html",
           "https://az000za.github.io/AZ000ZA/DevCore/DevCore.html",
