--- a/ui/dynamicForms.html
+++ b/ui/dynamicForms.html
@@ -3,7 +3,7 @@
     <script type="text/javascript" src="./DevCore/Data.html"></script>
     <script type="text/javascript" src="./ui/UINode.js"></script>
     <script type="text/javascript">
-        class ChatConsoleDynamicForms extends UINode {
+        class DynamicForms extends UINode {
             constructor(app){
                 super(app);
             }
