--- a/ui/header.html
+++ b/ui/header.html
@@ -2,7 +2,7 @@
     <body id="root"></body>
     <script type="text/javascript" src="./DevCore/Data.html"></script>
     <script type="text/javascript" src="./ui/UINode.html"></script>
-        class ChatConsoleHeader extends UINode {
+        class Header extends UINode {
             constructor(app){
                 super(app);
             }
