--- a/ui/nav-list.html
+++ b/ui/nav-list.html
@@ -3,7 +3,7 @@
     <script type="text/javascript" src="./DevCore/Data.html"></script>
     <script type="text/javascript" src="./ui/UINode.html"></script>
     <script type="text/javascript">
-        class ChatNavList extends UINode {
+        class NavList extends UINode {
             constructor(app){
                 super(app);
             }
