Update and rename chat-console-msgs.html to msgs.html

--- a/ui/msgs.html
+++ b/ui/msgs.html
@@ -3,7 +3,7 @@
     <script type="text/javascript" src="./DevCore/Data.html"></script>
     <script type="text/javascript" src="./ui/UINode.html"></script>
     <script type="text/javascript">
-        class ChatConsoleMsgs extends UINode {
+        class Msgs extends UINode {
             constructor(app){
                 // console.log("module: ChatConsoleMsgs");
                 // const sampleObjMsg = {
