--- a/ChannelWebAI.html
+++ b/ChannelWebAI.html
@@ -19,7 +19,7 @@
             </script>
       </head>
       <body id="root"></body>
-      <script type="text/javascript" src="https://az000za.github.io/DevCore/importHTMLAPP.js"></script>
+      <script type="text/javascript" src="https://az000za.github.io/WEBAPPS/WEBAPPS.js"></script>
       <script type="text/javascript" filename="ChannelWeb.html">
         const WEBAPPS = importHTMLAPP([
           "https://az000za.github.io/AZ000ZA/routes.html",
